bugfix dark mode

--- a/site/assets/styles/topic-detail.scss
+++ b/site/assets/styles/topic-detail.scss
@@ -183,9 +183,7 @@
 
   .topic-tags {
     .topic-tag {
-      height: 25px;
-      padding: 0 8px;
-      display: inline-flex;
+      padding: 2px 8px;
       justify-content: center;
       align-items: center;
       border-radius: 12.5px;
