--- a/site/assets/styles/topic.scss
+++ b/site/assets/styles/topic.scss
@@ -33,7 +33,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 5px;
-    background: var(--bg-color2);
+    background: var(--bg-color3);
     border: 1px solid var(--border-color);
     color: var(--text-color3);
     font-size: 14px;
@@ -41,8 +41,8 @@
 
     &:hover {
       color: var(--text-link-color);
-      background: var(--bg-color);
-      border: 1px solid var(--border-hover-color);
+      background: var(--bg-color2);
+      // border: 1px solid var(--border-hover-color);
     }
 
     &.selected {
